[gd_scene load_steps=10 format=3 uid="uid://dtmqd2olooo6o"]

[ext_resource type="Script" path="res://Scripts/player_ai.gd" id="1_pu56q"]
[ext_resource type="Texture2D" uid="uid://wsp6klxynw83" path="res://tank2MirroredToFixPerceivedDirection.png" id="2_y2ofo"]
[ext_resource type="Script" path="res://Scripts/health_system.gd" id="3_n2lbt"]
[ext_resource type="Theme" uid="uid://caskmp53b5u7" path="res://Themes/ui.theme" id="5_y5x5t"]
[ext_resource type="Script" path="res://Scripts/Lifebar.gd" id="6_sivp2"]
[ext_resource type="Script" path="res://AIController2D.gd" id="7_h7qjk"]
[ext_resource type="Script" path="res://Scripts/shooting_system_ai.gd" id="7_wdjxt"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_vsgo3"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:syncPos")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:syncRot")
properties/3/spawn = true
properties/3/replication_mode = 1

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gqds7"]

[node name="PlayerAI" type="CharacterBody2D" groups=["Player"]]
scale = Vector2(0.9, 0.9)
collision_mask = 99
script = ExtResource("1_pu56q")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(2.22222, 6.66667)
rotation = -1.5708
scale = Vector2(0.198925, 0.185552)
texture = ExtResource("2_y2ofo")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-2.22222, 0)
rotation = 1.5708
scale = Vector2(2.6129, 1.82178)
polygon = PackedVector2Array(-10, -10.7407, -8.94737, -16.6667, -8.94737, -17.4074, -6.84211, -12.2222, -4.21053, -17.4074, 5.26316, -16.6667, 7.36842, -12.2222, 9.47369, -15.9259, 11.5789, 4.81481, 14.7368, 4.07407, 13.1579, 9.25926, 6.84211, 15.1852, -5.78947, 15.1852, -13.1579, 10, -14.7368, 4.07407, -14.7368, 4.07407, -10.5263, 5.55556)
metadata/_edit_lock_ = true

[node name="HealthSystem" type="Node" parent="."]
script = ExtResource("3_n2lbt")

[node name="Lifebar" type="ProgressBar" parent="."]
offset_left = -23.3333
offset_top = -52.2222
offset_right = 24.6667
offset_bottom = -44.2222
theme = ExtResource("5_y5x5t")
value = 20.0
show_percentage = false
script = ExtResource("6_sivp2")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_interval = 0.01
delta_interval = 0.01
replication_config = SubResource("SceneReplicationConfig_vsgo3")

[node name="AIController2D" type="Node2D" parent="."]
script = ExtResource("7_h7qjk")
metadata/_edit_lock_ = true

[node name="ShootingSystemAI" type="Marker2D" parent="."]
position = Vector2(37.7778, 2.22222)
script = ExtResource("7_wdjxt")
metadata/_edit_lock_ = true

[node name="FrontRayCastEnemy" type="RayCast2D" parent="."]
position = Vector2(36.6667, 2.22222)
target_position = Vector2(1250, 0)
collision_mask = 4

[node name="Line2D" type="Line2D" parent="FrontRayCastEnemy"]
material = SubResource("CanvasItemMaterial_gqds7")
position = Vector2(20.6158, -10)
scale = Vector2(26.7648, 4.575)
points = PackedVector2Array(0, 2.22222, 10, 2.22222, 17.1725, 2.22223, 20, 2.22222, 27.7778, 2.22222, 33.3333, 2.22222, 45.5556, 2.22222)
width = 1.0
default_color = Color(0.333333, 1, 0.886275, 1)

[node name="FrontRayCastObstacleAndEnemy" type="RayCast2D" parent="."]
position = Vector2(36.6667, 2.22222)
target_position = Vector2(1250, 0)
collision_mask = 6

[node name="Line2D" type="Line2D" parent="FrontRayCastObstacleAndEnemy"]
material = SubResource("CanvasItemMaterial_gqds7")
position = Vector2(20.055, -10)
scale = Vector2(26.204, 4.575)
points = PackedVector2Array(0, 2.22222, 10, 2.22222, 17.1725, 2.22223, 20, 2.22222, 27.7778, 2.22222, 33.3333, 2.22222, 45.5556, 2.22222)
width = 1.0
default_color = Color(0.333333, 1, 0.886275, 1)

[node name="GameResetTimer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="damage_taken" from="HealthSystem" to="Lifebar" method="_on_health_system_damage_taken"]
[connection signal="timeout" from="GameResetTimer" to="." method="_on_game_reset_timer_timeout"]
